# llm-guard

./: .env  .gitignore  20240918_215506.csv  20240918_220652.csv  20240918_221010.csv  20240918_221715.csv  20240918_223937.csv  20240920_213951.csv  20241009_205853.csv  20241013_031720.csv  20241015_125944.csv  20241017_220145.csv  20241019_124947.csv  20241205_210123_meta-llama.csv  README-benchmark-dataset.md  README-model.md  README-synthetic-dataset.md  README.md  data_samples.ipynb  guard_misinf.py  guard_polite.py  pyproject.toml  requirements.txt  run.py
data/: 20240923_234615_Meta-Llama-3.1-8B-Instruct.csv  20241011_211023_Meta-Llama-3.1-8B-Instruct.csv  20241022_190845_Meta-Llama-3.1-8B-Instruct.csv  20241203_210734_mistralai.csv  20250130_155725_Meta-Llama-3.1-8B-Instruct.csv  20250130_155725_meta-llama.csv  20250131_164041_DeepSeek-R1-Distill-Llama-8B.csv  20250203_213413_Meta-Llama-3.1-8B-Instruct.csv  20250204_180959_Meta-Llama-3.1-8B-Instruct.csv  20250310_201354_Meta-Llama-3.1-8B-Instruct_prompt-v2.csv  20250310_202348_Meta-Llama-3.1-8B-Instruct_prompt-v2.csv  20250310_223115_Meta-Llama-3.1-8B-Instruct_prompt-v2.csv  20250312_202742_Meta-Llama-3.1-8B-Instruct_prompt-v2.csv  20250314_035203_Mixtral-8x7B-Instruct-v0.1_prompt-v2.csv  20250317_154330_Meta-Llama-3.1-8B-Instruct_prompt-v2.csv  20250318_133712_Meta-Llama-3.1-8B-Instruct_prompt-v2.csv
data-generator/: prompts.py  sdg.py
data/generated_data/: 20240920_220522_Meta-Llama-3.1-8B-Instruct.csv  20240922_112254_Meta-Llama-3.1-8B-Instruct.csv  (+5 more)
data/val_data/: val.csv
llm_guard/: labels.py  utils.py
(+8 files in other folders)
