[project]
name = "misinformation-guard"
version = "0.1.1"
authors = [{ name = "Murilo Gustineli", email = "murilo.gustineli@intel.com" }]
description = "MisInformation Guard helper package"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/murilogustineli/misinformation-guard"
Issues = "https://github.com/murilogustineli/misinformation-guard/issues"

[project.scripts]
gpt = "gpt.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.setuptools.packages.find]
where = ["."]
include = ["misinformation-guard*"]
namespaces = false
